# bizaxl_ayurvedic

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  license.txt  pyproject.toml  requirements.txt
bizaxl_ayurvedic/: hooks.py  modules.txt  patches.txt
bizaxl_ayurvedic/ai/: chatbot.py  feedback_collector.py  follow_up_reminders.py  herb_suggestion.py  lead_scoring.py  seasonal_forecast.py  store_benchmarking.py
bizaxl_ayurvedic/config/: desktop.py
bizaxl_ayurvedic/integrations/: prescription_ocr.py  whatsapp.py
bizaxl_ayurvedic/patches/v0_1/: add_custom_fields.py
bizaxl_ayurvedic/patches/v0_10/: add_exercise_steps_field.py
bizaxl_ayurvedic/patches/v0_11/: add_exercise_steps_to_therapy_session_exercise.py
bizaxl_ayurvedic/patches/v0_12/: add_rate_fields_to_treatment_plan_items.py
bizaxl_ayurvedic/patches/v0_13/: add_rate_to_drug_prescription.py
bizaxl_ayurvedic/patches/v0_2/: add_patient_dosha_fields.py
bizaxl_ayurvedic/patches/v0_3/: add_settings_and_translation_fields.py
bizaxl_ayurvedic/patches/v0_4/: add_token_status_fields.py
bizaxl_ayurvedic/patches/v0_5/: add_treatment_plan_field.py
bizaxl_ayurvedic/patches/v0_6/: add_plan_rate_field.py
bizaxl_ayurvedic/patches/v0_7/: remove_plan_rate_field.py
bizaxl_ayurvedic/patches/v0_8/: add_patient_and_assessment_photo_fields.py
bizaxl_ayurvedic/patches/v0_9/: add_token_number_field.py
bizaxl_ayurvedic/public/css/: bizaxl_ayurvedic.css
bizaxl_ayurvedic/translations/: hindi.csv  sanskrit.csv  translate.py
bizaxl_ayurvedic/www/: book_appointment.html  book_appointment.py
(+71 files in other folders)
