[project]
name = "bizaxl_ayurvedic"
authors = [{ name = "bizaxl", email = "sales@bizaxl.com" }]
description = "Ayurvedic Store & Clinic Suite for ERPNext v15+ (Bizaxl Ayurvedic)"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # Core deps ship with Frappe/ERPNext; only list what this app adds:
    "requests>=2.31.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
forecasting = ["prophet>=1.1.5", "pandas>=2.0.0"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
